--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,7 @@ dependencies = [
     "balldontlie (>=0.1.6,<0.2.0)",
     "python-dotenv (>=1.1.1,<2.0.0)",
     "google-cloud-storage (>=3.2.0,<4.0.0)",
-    "requests (>=2.32.4,<3.0.0)"
+    "requests (>=2.32.4,<3.0.0)",
 ]
 
 
