--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -31,6 +31,11 @@ clean-targets:         # directories to be removed by `dbt clean`
 # files using the `{{ config(...) }}` macro.
 models:
   lamjav_dbt:
-    # Config indicated by + and applies to all files under models/example/
-    example:
+    # Staging models configuration
+    staging:
       +materialized: view
+      +schema: nba
+    # Marts models configuration
+    marts:
+      +materialized: table
+      +schema: nba
