--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,5 @@ sqlfluff-templater-dbt = "^3.4.2"
 
 
 [tool.taskipy.tasks]
-fix = "ruff check . --fix && sqlfluff fix ."
+fix = "ruff format . && ruff check . --fix && sqlfluff format . && sqlfluff fix ."
 run = "poetry run python"
-format = "ruff format ."
