--- a/models/staging/nba/sources.yml
+++ b/models/staging/nba/sources.yml
@@ -78,4 +78,62 @@ sources:
             data_type: integer
           - name: team
             description: "Player team information (STRUCT with id, name, abbreviation, etc.)"
+            data_type: struct
+
+      - name: raw_team_standings
+        description: "NBA team standings raw data from Balldontlie API (NDJSON format)"
+        external:
+          location: "gs://lamjav_storage/nba/landing/team_standings/team_standings_*.json"
+          options:
+            format: NEWLINE_DELIMITED_JSON
+        columns:
+          - name: team
+            description: "Team information (STRUCT with id, name, abbreviation, conference, division, etc.)"
+            data_type: struct
+          - name: conference_record
+            description: "Conference record (e.g., '10-1')"
+            data_type: string
+          - name: conference_rank
+            description: "Rank within conference"
+            data_type: integer
+          - name: division_record
+            description: "Division record (e.g., '5-0')"
+            data_type: string
+          - name: division_rank
+            description: "Rank within division"
+            data_type: integer
+          - name: wins
+            description: "Total number of wins"
+            data_type: integer
+          - name: losses
+            description: "Total number of losses"
+            data_type: integer
+          - name: home_record
+            description: "Home games record (e.g., '8-0')"
+            data_type: string
+          - name: road_record
+            description: "Away games record (e.g., '2-1')"
+            data_type: string
+          - name: season
+            description: "Season year"
+            data_type: integer
+
+      - name: raw_season_averages
+        description: "NBA season averages raw data from Balldontlie API (NDJSON format)"
+        external:
+          location: "gs://lamjav_storage/nba/landing/season_averages/season_averages_*.json"
+          options:
+            format: NEWLINE_DELIMITED_JSON
+        columns:
+          - name: player
+            description: "Player information (STRUCT with id, first_name, last_name, position, height, weight, etc.)"
+            data_type: struct
+          - name: season
+            description: "Season year (e.g., 2024)"
+            data_type: integer
+          - name: season_type
+            description: "Season type (regular, playoffs, ist, playin)"
+            data_type: string
+          - name: stats
+            description: "Season statistics (STRUCT with various statistical fields based on category/type)"
             data_type: struct 
