--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,8 +11,13 @@ dependencies = [
     "balldontlie (>=0.1.6,<0.2.0)",
     "python-dotenv (>=1.1.1,<2.0.0)",
     "google-cloud-storage (>=2.4,<3.2)",
+    "google-cloud-bigquery (>=3.0.0,<4.0.0)",
     "requests (>=2.32.4,<3.0.0)",
     "dbt-bigquery (>=1.10.0,<2.0.0)",
+    "matplotlib (>=3.10.5,<4.0.0)",
+    "pandas (>=2.3.1,<3.0.0)",
+    "camelot-py (>=1.0.0,<2.0.0)",
+    "thefuzz (>=0.20.0,<1.0.0)",
 ]
 
 
