evoluindo no dbt

--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -64,3 +64,9 @@ models:
       # BI marts models
       bi:
         +schema: bi
+
+# Seeds configuration
+seeds:
+  lamjav_dbt:
+    +schema: nba
+
