--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,3 +36,4 @@ sqlfluff-templater-dbt = "^3.4.2"
 [tool.taskipy.tasks]
 fix = "ruff format . && ruff check . --fix && sqlfluff format . && sqlfluff fix ."
 run = "poetry run python"
+dbt = "dbt run --select"
