avancando integracao front end com tabela prop_player

--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -55,6 +55,9 @@ models:
       # BI Dev intermediate models
       bi_dev:
         +schema: bi_dev
+
+      odds:
+        +schema: odds
     # Marts models configuration
     marts:
       +materialized: table
