--- a/profiles.yml
+++ b/profiles.yml
@@ -1,14 +1,28 @@
 lamjav_dbt:
   outputs:
+    # Target para uso local com arquivo de credenciais
     dev:
       dataset: "{{ env_var('DBT_DATASET') }}"
       job_execution_timeout_seconds: 300
       job_retries: 1
-      keyfile:  "{{ env_var('GOOGLE_APPLICATION_CREDENTIALS') }}"
+      keyfile: "{{ env_var('GOOGLE_APPLICATION_CREDENTIALS') }}"
       location: us-east1
       method: service-account
       priority: interactive
       project: "{{ env_var('DBT_PROJECT') }}"
       threads: 4
       type: bigquery
-  target: dev
+    
+    # Target para Cloud Run/GCP com service account nativa
+    cloud:
+      dataset: "{{ env_var('DBT_DATASET') }}"
+      job_execution_timeout_seconds: 300
+      job_retries: 1
+      location: us-east1
+      method: oauth
+      priority: interactive
+      project: "{{ env_var('DBT_PROJECT') }}"
+      threads: 4
+      type: bigquery
+  
+  target: "{{ env_var('DBT_TARGET', 'dev') }}"
