--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,25 +1,23 @@
-[project]
+[tool.poetry]
 name = "lamjav"
 version = "0.1.0"
-description = ""
-authors = [
-    {name = "Mateus Kasuya",email = "mateusvbkasuya@gmail.com"}
-]
+description = "NBA Analytics and Betting Data Pipeline"
+authors = ["Mateus Kasuya <mateusvbkasuya@gmail.com>"]
 readme = "README.md"
-requires-python = ">=3.12,<4.0"
-dependencies = [
-    "balldontlie (>=0.1.6,<0.2.0)",
-    "python-dotenv (>=1.1.1,<2.0.0)",
-    "google-cloud-storage (>=2.4,<3.2)",
-    "google-cloud-bigquery (>=3.0.0,<4.0.0)",
-    "requests (>=2.32.4,<3.0.0)",
-    "dbt-bigquery (>=1.10.0,<2.0.0)",
-    "matplotlib (>=3.10.5,<4.0.0)",
-    "pandas (>=2.3.1,<3.0.0)",
-    "camelot-py (>=1.0.0,<2.0.0)",
-    "thefuzz (>=0.20.0,<1.0.0)",
-]
+packages = [{include = "lib_dev"}]
 
+[tool.poetry.dependencies]
+python = ">=3.12,<4.0"
+balldontlie = ">=0.1.6,<0.2.0"
+python-dotenv = ">=1.1.1,<2.0.0"
+google-cloud-storage = ">=2.4,<3.2"
+google-cloud-bigquery = ">=3.0.0,<4.0.0"
+requests = ">=2.32.4,<3.0.0"
+dbt-bigquery = ">=1.10.0,<2.0.0"
+matplotlib = ">=3.10.5,<4.0.0"
+pandas = ">=2.3.1,<3.0.0"
+camelot-py = ">=1.0.0,<2.0.0"
+thefuzz = ">=0.20.0,<1.0.0"
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
