--- a/requirements_raw_injury_report.txt
+++ b/requirements_raw_injury_report.txt
@@ -6,11 +6,14 @@ google-cloud-storage==2.10.0
 google-cloud-bigquery==3.13.0
 
 # Data processing dependencies
-pandas==2.1.4
+pandas==2.3.1
 
 # PDF processing dependencies
 camelot-py==1.0.0
 PyPDF2==3.0.1
+
+# SQLite dependencies (required for camelot-py)
+pysqlite3-binary==0.5.0
 
 # Environment and configuration
 python-dotenv==1.0.0
