--- a/requirements_cloud_run.txt
+++ b/requirements_cloud_run.txt
@@ -7,6 +7,7 @@ google-cloud-bigquery>=3.13.0
 
 # Data processing dependencies
 pandas>=2.3.1
+pyarrow>=14.0.0
 
 # PDF processing dependencies (with system libraries available)
 camelot-py[cv]>=1.0.0
